# django-gitlog

./: .readthedocs.yml  LICENSE  MANIFEST.in  README.rst  readthedocs.yml  setup.cfg
django_gitlog.egg-info/: PKG-INFO  SOURCES.txt
django_polls.egg-info/: PKG-INFO  SOURCES.txt
docs/: requirements.txt
docs/source/: LICENSE.rst  conf.py  contents.rst  index.rst
gitlog/: apps.py  gitlog.txt  models.py  urls.py  utils.py  views.py
gitlog/migrations/: 0002_auto_20200204_1304.py
gitlog/templates/gitlog/: index.html  run.html
