[metadata]
name = django-gitlog
version = 0.1
description = A Django app parse and save git log.
long_description = file: README.rst
url = https://www.example.com/
author = Jack Sanchez
author_email = evo@gms.tku.edu.tw
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2.9  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: